--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "ioredis": "^5.4.1",
     "ws": "^8.14.2"
   },
   "devDependencies": {
